--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint \"**/*.js\"",
-    "test": "mocha -r esm tests/*.test.js",
-    "test:watch": "mocha -r esm --watch tests/*.test.js"
+    "test": "mocha src/*.test.js",
+    "test:watch": "npm run test -- --watch"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,9 @@
     "eslint": "^7.2.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "esm": "^3.2.25",
     "mocha": "^8.2.1",
     "mock-fs": "^4.13.0",
+    "mock-require": "^3.0.3",
     "sinon": "^9.2.1"
   }
 }
