--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-import": "^2.22.1",
     "mocha": "^8.2.1",
     "mock-fs": "^4.13.0",
-    "mock-require": "^3.0.3",
+    "proxyquire": "^2.1.3",
     "sinon": "^9.2.1"
   }
 }
