--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint \"**/*.js\"",
-    "test": "mocha src/*.test.js",
+    "test": "mocha setup-tests.js src/*.test.js",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "mocha": "^8.2.1",
     "mock-fs": "^4.13.0",
     "proxyquire": "^2.1.3",
-    "sinon": "^9.2.1"
+    "sinon": "^9.2.1",
+    "sinon-chai": "^3.5.0"
   }
 }
