--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,6 +14,7 @@ parserOptions:
   ecmaVersion: 2018
   sourceType: module
 rules:
+  array-bracket-spacing: off
   quotes:
     - 'error'
     - 'single'
@@ -25,6 +26,7 @@ rules:
       max: 2
       maxBOF: 0
       maxEOF: 1
+  no-console: off
   'import/prefer-default-export': off
   no-unused-expressions: 'off'
   'import/no-extraneous-dependencies':
@@ -34,6 +36,6 @@ rules:
   'object-curly-newline': 'off'
 overrides:
   -
-    files: 'tests.js'
+    files: '**/*.test.js'
     env:
       mocha: true
